--- a/public/css/overwrite.css
+++ b/public/css/overwrite.css
@@ -337,7 +337,8 @@ input.search-query {
 ul,
 ol {
   padding: 0;
-  margin: 0 0 10px 25px;
+  /* margin: 0 0 10px 25px; */
+  margin: 0 0 0 0;
 }
 
 ul ul,
