--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ h1,h2, h3, h4, h5, h6 {
 
 
 .row,.row-fluid {
-	margin-bottom:30px;
+	/* margin-bottom:30px; */
 }
 
 .row .row,.row-fluid .row-fluid{
